      Rd files.  These are \samp{beramono} and \samp{inconsolata}, and
      used the named font for mononspaced output. They are intended to
      be used in combination with \samp{times}, and
      \samp{times,inconsolata,hyper} is now the default for the
      reference manual and package manuals.

      \item Automatic printing for reference classes is now done by
      the \code{$show()} method.  A method is defined for class
      \samp{envRefClass} and may be overriden for user classes (see
      the \code{?ReferenceClasses} example).  S4 \code{show()} methods
      should no longer be needed for reference classes.
      
      \item \code{tools::Rdiff} (by default) and \code{R CMD Rdiff}
      now ignore differences in pointer values when comparing printed
      environments, compiled byte code, etc.   

      \item The \code{"source"} attribute on functions created with
      \code{keep.source=TRUE} has been replaced with a \code{"srcref"}
      attribute.  The \code{"srcref"} attribute references an in-memory
      copy of the source file using the \code{"srcfilecopy"} or the
      new \code{"srcfilealias"} class.
      
      \item New items \href{UserManuals.html}{User Manuals} and 
      \href{http://developer.r-project.org/TechDocs}{Technical Papers}
      have been added to the HTML help main page.  These link to
      vignettes in the base and recommended packages and to a
      collection of papers about R issues, respectively.
    }
  }

  \subsection{GRAPHICS DEVICES}{
    \itemize{
      \item The \code{pdf()} device makes use of Flate compression: this
      controlled by the new logical argument \code{compress}, and is
      enabled by default.

      \item Devices \code{svg()}, \code{cairo_pdf()} and
      \code{cairo_ps()} gain a \code{family} argument.

      On a Unix-alike \code{X11()} gains a \code{family} argument.  This
      is one of the \code{x11.options()} and so can be passed as an