@@ -171,11 +171,11 @@ manglePackageName <- function (pkgName, pkgVersion) .Defunct()
 ## Deprecated in 2.12.2 (and only ever experimental)
 ## Defunct in 2.13.0
 .Import <- function(...)
-    .Defunct(msg = "name spaces should be specified via the 'NAMESPACE' file")
+    .Defunct(msg = "namespaces should be specified via the 'NAMESPACE' file")
 .ImportFrom <- function(name, ...)
-    .Defunct(msg = "name spaces should be specified via the 'NAMESPACE' file")
+    .Defunct(msg = "namespaces should be specified via the 'NAMESPACE' file")
 .Export <- function(...)
-    .Defunct(msg = "name spaces should be specified via the 'NAMESPACE' file")
+    .Defunct(msg = "namespaces should be specified via the 'NAMESPACE' file")
 .S3method <- function(generic, class, method)
-    .Defunct(msg = "name spaces should be specified via the 'NAMESPACE' file")
+    .Defunct(msg = "namespaces should be specified via the 'NAMESPACE' file")
 ## </entry>
