@@ -471,7 +471,7 @@ setMethod("Summary", "L",
 setMethod("[", signature(x="L", i="ANY", j="missing",drop="missing"),
           function(x,i,j,drop) new(class(x), x@.Data[i]))
 ## defining S4 methods for sort() has no effect on calls to
-## sort() from functions in a name space; e.g., median.default.
+## sort() from functions in a namespace; e.g., median.default.
 ## but setting an xtfrm() method works.
 setMethod("xtfrm", "L", function(x) xtfrm(unlist(x@.Data)))
 ## median is documented to use mean(), so we need an S3 mean method:
